[gd_scene load_steps=5 format=3 uid="uid://dttx53vhtgwy1"]

[ext_resource type="Script" path="res://ui/level_select/level_info.gd" id="1_dbdb1"]
[ext_resource type="PackedScene" uid="uid://0im5s06d6220" path="res://ui/level_select/truth_table_row_no_check.tscn" id="3_lvoro"]
[ext_resource type="Theme" uid="uid://c037ts28mkfoy" path="res://ui/themes/Bold.tres" id="4_tjms4"]
[ext_resource type="FontFile" uid="uid://d3ya2ni4d4nbf" path="res://assets/UI/font/Static/Shantell_Sans-Normal-Bold.otf" id="5_xk1bm"]

[node name="LevelInfo" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 432.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dbdb1")

[node name="LevelTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 24.0
offset_right = 449.0
offset_bottom = 65.0
theme_override_fonts/font = ExtResource("5_xk1bm")
theme_override_font_sizes/font_size = 20
autowrap_mode = 3

[node name="DescriptionScroll" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 72.0
offset_right = 448.0
offset_bottom = 320.0

[node name="LevelDescription" type="Label" parent="DescriptionScroll"]
custom_minimum_size = Vector2(0, 168)
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 3

[node name="TruthTableHeading" parent="." instance=ExtResource("3_lvoro")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -168.0
offset_right = -48.0
offset_bottom = -112.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_tjms4")

[node name="TruthTableScroll" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(320, 296)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -104.0
offset_right = -48.0
offset_bottom = 192.0
grow_horizontal = 0
grow_vertical = 2

[node name="TruthTable" type="VBoxContainer" parent="TruthTableScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VariablesScroll" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = -280.0
offset_right = 472.0
offset_bottom = -48.0
grow_vertical = 0

[node name="Container" type="HBoxContainer" parent="VariablesScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputVariables" type="VBoxContainer" parent="VariablesScroll/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OutputVariables" type="VBoxContainer" parent="VariablesScroll/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -120.0
offset_right = -45.0
offset_bottom = -38.0
grow_horizontal = 0
grow_vertical = 0
text = "Play"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_top = 15.0
offset_right = -18.0
offset_bottom = 88.0
grow_horizontal = 0
text = "X"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
